// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExportDropdown handles click on menu item: StyledContextualMenuBase props 1`] = `undefined`;

exports[`ExportDropdown handles click to show menu with feature flags 1`] = `
<DocumentFragment>
  <div>
    <button
      aria-label="export options menu"
      class="ms-Button ms-Button--primary root-109"
      data-automation-id="report-export-dropdown"
      data-is-focusable="true"
      type="button"
    >
      <span
        class="ms-Button-flexContainer flexContainer-110"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-111"
        >
          <span
            class="ms-Button-label label-113"
            id="id__3"
          >
            Export
          </span>
        </span>
        <i
          aria-hidden="true"
          class="ms-Icon root-105 ms-Button-menuIcon menuIcon-114"
          data-icon-name="ChevronDown"
        />
      </span>
    </button>
    <mock-styledcontextualmenubase
      id="report-export-dropdown-menu"
      items="[object Object],[object Object],[object Object]"
      target="[object HTMLButtonElement]"
    />
  </div>
</DocumentFragment>
`;

exports[`ExportDropdown handles click to show menu with feature flags but missing json 1`] = `
<DocumentFragment>
  <div>
    <button
      aria-label="export options menu"
      class="ms-Button ms-Button--primary root-109"
      data-automation-id="report-export-dropdown"
      data-is-focusable="true"
      type="button"
    >
      <span
        class="ms-Button-flexContainer flexContainer-110"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-111"
        >
          <span
            class="ms-Button-label label-113"
            id="id__6"
          >
            Export
          </span>
        </span>
        <i
          aria-hidden="true"
          class="ms-Icon root-105 ms-Button-menuIcon menuIcon-114"
          data-icon-name="ChevronDown"
        />
      </span>
    </button>
    <mock-styledcontextualmenubase
      id="report-export-dropdown-menu"
      items="[object Object],[object Object]"
      target="[object HTMLButtonElement]"
    />
  </div>
</DocumentFragment>
`;

exports[`ExportDropdown handles click to show menu with feature flags but missing json: StyledContextualMenuBase props 1`] = `undefined`;

exports[`ExportDropdown handles click to show menu with feature flags: StyledContextualMenuBase props 1`] = `undefined`;

exports[`ExportDropdown handles click to show menu without feature flags 1`] = `
<DocumentFragment>
  <div>
    <button
      aria-label="export options menu"
      class="ms-Button ms-Button--primary root-109"
      data-automation-id="report-export-dropdown"
      data-is-focusable="true"
      type="button"
    >
      <span
        class="ms-Button-flexContainer flexContainer-110"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-111"
        >
          <span
            class="ms-Button-label label-113"
            id="id__0"
          >
            Export
          </span>
        </span>
        <i
          aria-hidden="true"
          class="ms-Icon root-105 ms-Button-menuIcon menuIcon-114"
          data-icon-name="ChevronDown"
        />
      </span>
    </button>
    <mock-styledcontextualmenubase
      id="report-export-dropdown-menu"
      items="[object Object]"
      target="[object HTMLButtonElement]"
    />
  </div>
</DocumentFragment>
`;

exports[`ExportDropdown handles click to show menu without feature flags: StyledContextualMenuBase props 1`] = `undefined`;

exports[`ExportDropdown renders without menu items 1`] = `
<DocumentFragment>
  <div>
    <mock-customizedprimarybutton
      arialabel="export options menu"
      data-automation-id="report-export-dropdown"
      menuiconprops="[object Object]"
      text="Export"
    />
  </div>
</DocumentFragment>
`;

exports[`ExportDropdown renders without menu items: StyledContextualMenuBase props 1`] = `undefined`;

exports[`ExportDropdown should dismiss the contextMenu 1`] = `
<DocumentFragment>
  <div>
    <button
      aria-label="export options menu"
      class="ms-Button ms-Button--primary root-109"
      data-automation-id="report-export-dropdown"
      data-is-focusable="true"
      type="button"
    >
      <span
        class="ms-Button-flexContainer flexContainer-110"
        data-automationid="splitbuttonprimary"
      >
        <span
          class="ms-Button-textContainer textContainer-111"
        >
          <span
            class="ms-Button-label label-113"
            id="id__12"
          >
            Export
          </span>
        </span>
        <i
          aria-hidden="true"
          class="ms-Icon root-105 ms-Button-menuIcon menuIcon-114"
          data-icon-name="ChevronDown"
        />
      </span>
    </button>
    <mock-styledcontextualmenubase
      id="report-export-dropdown-menu"
      items="[object Object]"
      target="[object HTMLButtonElement]"
    />
  </div>
</DocumentFragment>
`;

exports[`ExportDropdown should dismiss the contextMenu: StyledContextualMenuBase props 1`] = `undefined`;
